--- a/style.css
+++ b/style.css
@@ -269,11 +269,10 @@ section {
 .about-containers,
 .about-details-container {
     display: flex;
+    padding-right: 5%;
+    
 }
 
-.about-pic {
-    border-radius: 2rem;
-}
 
 .arrow {
     position: absolute;
