--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ section {
 .arrow {
     position: absolute;
     right: -5rem;
-    bottom: 1rem;
+    bottom: 2.5rem;
 }
 
 .details-container {
@@ -300,5 +300,7 @@ section {
     width: 400px;
     margin: auto 0;
 }
+
+/* PROJECT SECTION */
 
 
