--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ section {
 .contact-info-upper-container{
     display: flex;
     justify-content: center;
-    border-radius: 2.5rem;
+    border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     background: (250, 250, 250);
@@ -353,6 +353,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 0.5rem;
     margin: 1rem;
 }
 
